# demo01

./: CMakeLists.txt  Makefile.linux  Makefile.windows  README.md  main.cpp
res/: ARTIST.S3M
src/: effect.cpp  effect.h  fastsin.cpp  fastsin.h  fire.cpp  fire.h  hdispl.cpp  hdispl.h  main.cpp  rippledispl.cpp  rippledispl.h  sdlmanager.cpp  sdlmanager.h  surface.cpp  surface.h  texturemanager.cpp  texturemanager.h
